<?xml version="1.0" encoding="utf-8"?>
<!--
  Hex TCG Deck Builder
      Copyright ( C ) 2014  Chad Kinsella, Dave Kerr and Laurence Reading
  
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">HEX TCG - Deck Builder</string>
    <string name="title_section1">Filter 1</string>
    <string name="title_section2">Filter 2</string>
    <string name="title_section3">Filter 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Don\'t Press.</string>
    <string name="action_settings">Don\'t Press!</string>
    <string name="view_tutorial">View tutorial</string>
    <string name="deck_view">Deck View</string>
    <string name="list_view">List View</string>
    <string name="new_deck">New Deck</string>
    <string name="load_deck">Load Deck</string>
    <string name="save_deck">Save Deck</string>
    <string name="delete_deck">Delete Deck</string>
    <string name="new_deck_name">New Deck Name</string>
    <string name="select_champion">Select Champion</string>
    <string name="full_image_description">Full card view</string>
    <string name="socket_image_description">Socket Image</string>
    <string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
    <string name="text_button_resume_cellular">Resume download</string>
    <string name="text_button_wifi_settings">Wi-Fi settings</string>
    <string name="text_verifying_download">Verifying Download</string>
    <string name="text_validation_complete">XAPK File Validation Complete.  Select OK to exit.</string>
    <string name="text_validation_failed">XAPK File Validation Failed.</string>
    <string name="text_button_pause">Pause Download</string>
    <string name="text_button_resume">Resume Download</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_cancel_verify">Cancel Verification</string>
    <string name="new_hand">New Hand</string>
    <string name="mulligan">Mulligan</string>
    <string name="draw_card">Draw Card</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="socket_all">Socket All</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>   
    <string name="about">About</string>
    <string name="about_us">The Hex TCG Deck Builder App for Android is developed by Three Cool Guys: Chad (Chaxtreme), Laurence (Drisen Morl\'Baal), and Dave (Hawkstalion).</string>
    
    <string name="set_select_prompt">All Sets</string> 
    <string-array name="card_set_arrays">
        <item>All sets</item>
        <item>Shards of Fate</item>
        <item>Shattered Destiny</item>
    </string-array>
    
    <!-- Site Links -->
    <string name="officialcontent">Official Content</string>
    <string name="hextcg"><a href="http://www.HexTCG.com">HexTCG Official Website</a></string>
    <string name="hextcgforum"><a href="http://forums.cryptozoic.com/">HexTCG Official Forums</a></string>
    <string name="communitycontent">Community Content</string>
    <string name="hextcgpodcast"><a href="http://www.thresholdpodcast.com">Threshold: The Hex Podcast</a> - For your weekly Hex Podcast of deliciousness!</string>
    <string name="hextcgpro"><a href="http://hextcgpro.com/">HexTCG Pro</a> - Bringing the Hex Community together one tournament at a time.</string>
    <string name="hextcgreddit"><a href="http://www.reddit.com/r/hextcg">Hex TCG Reddit</a> - Because who doesn\'t like browsing for hours.</string>

</resources>
