<?xml version="1.0" encoding="utf-8"?>
<!--
  Hex TCG Deck Builder
      Copyright ( C ) 2014  Chad Kinsella, Dave Kerr and Laurence Reading
  
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hextcgapp="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_deck_view"
        android:icon="@drawable/action_button_deck_view"
        android:title="@string/deck_view"
        hextcgapp:showAsAction="ifRoom"/>

    <item android:id="@+id/action_list_view"
        android:icon="@drawable/action_button_list_view"
        android:title="@string/list_view"
        hextcgapp:showAsAction="ifRoom"/>
    
    <item android:id="@+id/view_tutorial"
          android:title="@string/view_tutorial"
          android:showAsAction="never" />
    
</menu>
